2012-2-x
Bugfix: Adde brevity penalty for RIBES
Bugfix: Do not read oracles when learning by xBLEU

2012-2-15
Added MIRA-like optimization for PRO-style learning
Better parse-cky/parse-tree-cky with correct cube-pruning
Smaller memory usage by removing spurious heap allocations
New: xBLEU training at cicada_learn{,_kbest}{,_mpi}

2012-1-18
INCOMPATIBLE CHANGE: revised internal indexing for tree-grammars. (You do not have to re-index, but the size is slightly smaller)
Better ngram feature computation by pre-transforming into word-id
Faster compose-phrase for phrase-based SMT :-)
New: added softmax-margin and loss-margin in cicaa_learn_kbest{,_mpi} (probably, we will deprecate cicada_maxlike{,mpi})
New: added many more learning algorithms in cicda_learn_kbest_mpi: pegasos and cutting-plane w/ and w/o line-search optimization
New: added mert-search which performs line-search used in mert
New: added direct-loss cutting plane algorithm (mcp)
New: added pa,cw,arow,nherd for block-based optimization
New: added optimized-sgd (osgd) like optimized-pegasos (opegasos) in cicada_learn_block_mpi
New: added cicada_query_{cky,tree,tree-cky} which query rules (or tree-rules) given sentence/lattice or hypergraph, and dump unique rules
Deprecated cicada-learn-linear.sh which is now integrated in cicad-learn.sh

2011-10-29
New: Better ngram state handling, inspired by Sorensen and Allauzen (2011) and Pauls and Klein (2011)
Serious bugfix for ngram access: we may hit ngrams which do not exist (very rare, though)
Added "project" option to project non-terminal symbols in GHKM algorithm

2011-10-27
Better feature application: completely removed "estimates." Now, we should encode estiamted score in each hypothesis.

2011-10-26
Support posterior matrix dumping in cicada_lexicon_{model1,hmm}
Support MST dependency in cicada_lexicon_{model1,hmm}
Support for aligner script: cicada-alignment.py will generate aligner.sh so that you can align arbitrary data, or dump posterior matrix