@@ -1,6 +1,7 @@
 2012-2-x
 Bugfix: Adde brevity penalty for RIBES
 Bugfix: Do not read oracles when learning by xBLEU
+New: added permute-deterministic which deterministically permute hyperedges wrt the category of the head.
 
 2012-2-15
 Added MIRA-like optimization for PRO-style learning
